--- a/nuevanota.html
+++ b/nuevanota.html
@@ -46,7 +46,7 @@
 			<main class="col-xs-12 col-sm-8 offset-sm-4 col-lg-9 offset-lg-3 col-xl-10 offset-xl-2 pt-3 pl-4">
 				<header class="page-header row justify-center">
 					<div class="col-md-6 col-lg-8" >
-						<h1 class="float-left text-center text-md-left">NOTAS</h1>
+						<h1 class="float-left text-center text-md-left">Cards</h1>
 					</div>
 
 					<div class="dropdown user-dropdown col-md-6 col-lg-4 text-center text-md-right"><a class="btn btn-stripped dropdown-toggle" href="https://example.com" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -66,82 +66,62 @@
 
 					<div class="clear"></div>
 				</header>
-
-				<section class="row">
+        <section class="row">
 					<div class="col-sm-12">
 						<section class="row">
+							<div class="col-md-12 col-lg-12">
+								<div class="jumbotron">
+
+									<form class="form-horizontal">
+										<fieldset>
 
 
-							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-primary">
-									<div class="card-header" title="Titulo">Recoger Separata</div>
+											<!-- Text input-->
+											<div class="form-group">
+												<label class="col-md-4 control-label" for="textinput">Titulo de la Nota</label>
+												<div class="col-md-6">
+													<input id="textinput" name="textinput" value="Reunion de Padres" type="text" placeholder="" class="form-control input-md">
 
-									<div class="card-block" title="Contenido">
-										<p>Recoger la separata de la reunion de padres del proximo día 24 de Octubre </p>
-									</div>
+												</div>
+											</div>
 
-									<div class="col-lg-12 text-right notas" style="border-top: 1px solid rgba(255,255,255,.2);">
-										<a  href="nuevanota.html"><em class="fa fa-plus-square mr-2"></em></a>
-										<a  href="nuevanota.html"><em class="fa fa-pencil mr-2"></em></a>
-										<em class="fa fa-times mr-2"></em>
-									</div>
+											<!-- Textarea -->
+											<div class="form-group">
+												<label class="col-md-4 control-label" for="">Contenido</label>
+												<div class="col-md-12">
+													<textarea class="form-control" id="" name="">RECORDATORIO: Reunion de Padres Miercoles 25 de Octubre </textarea>
+												</div>
+											</div>
+
+
+                      <div class="form-group">
+												<label class="col-md-4 control-label" for="">Tipo de Nota</label>
+												<div class="col-md-12">
+                          <select>
+                            <option value="volvo">Normal</option>
+                            <option value="saab">Informativa</option>
+                            <option value="mercedes">Requiere atencion</option>
+                            <option value="audi">Importante</option>
+                          </select>
+                        </div>
+											</div>
+
+
+										</fieldset>
+									</form>
+
+									<p class="lead text-right"><a class="btn btn-primary btn-lg mt-2" href="index.html" role="button">Enviar</a></p>
 								</div>
-							</div>
 
-							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-warning">
-									<div class="card-header" title="Titulo">Reunion padres</div>
 
-									<div class="card-block" title="Contenido">
-										<p>RECORDATORIO: Reunion de Padres Miercoles 25 de Octubre </p>
-									</div>
-
-									<div class="col-lg-12 text-right notas" style="border-top: 1px solid rgba(255,255,255,.2);">
-										<a  href="nuevanota.html"><em class="fa fa-plus-square mr-2"></em></a>
-										<a  href="nuevanota.html"><em class="fa fa-pencil mr-2"></em></a>
-										<em class="fa fa-times mr-2"></em>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-danger">
-									<div class="card-header" title="Titulo">Prueba de Evaluacion Inacabada</div>
-
-									<div class="card-block" title="Contenido">
-										<p>Aun falta 3 Alumnos que no tienen nota en la prueba de evaluacion inicial</p>
-									</div>
-
-									<div class="col-lg-12 text-right notas" style="border-top: 1px solid rgba(255,255,255,.2);">
-										<a  href="nuevanota.html"><em class="fa fa-plus-square mr-2"></em></a>
-										<a  href="nuevanota.html"><em class="fa fa-pencil mr-2"></em></a>
-										<em class="fa fa-times mr-2"></em>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-success">
-									<div class="card-header" title="Titulo">Suspender a Tejero</div>
-
-									<div class="card-block" title="Contenido">
-										<p>Pues eso</p>
-									</div>
-
-									<div class="col-lg-12 text-right notas" style="border-top: 1px solid rgba(255,255,255,.2);">
-										<a  href="nuevanota.html"><em class="fa fa-plus-square mr-2"></em></a>
-										<a  href="nuevanota.html"><em class="fa fa-pencil mr-2"></em></a>
-										<em class="fa fa-times mr-2"></em>
-									</div>
-								</div>
 							</div>
 
 
 						</section>
 
-
 					</div>
 				</section>
+
 			</main>
 		</div>
 	</div>
