--- a/index.html
+++ b/index.html
@@ -29,19 +29,18 @@
 	<div class="container-fluid" id="wrapper">
 		<div class="row">
 			<nav class="sidebar col-xs-12 col-sm-4 col-lg-3 col-xl-2 bg-faded sidebar-style-1">
-				<h1 class="site-title"><a href="index.html"><em class="fa fa-rocket"></em> Brand.name</a></h1>
+				<h1 class="site-title"><a href="index.html"><em class="fa fa-rocket"></em> Salesianos Triana</a></h1>
 
 				<a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><em class="fa fa-bars"></em></a>
 
 				<ul class="nav nav-pills flex-column sidebar-nav">
-					<li class="nav-item"><a class="nav-link" href="index.html"><em class="fa fa-dashboard"></em> Dashboard</a></li>
-					<li class="nav-item"><a class="nav-link" href="widgets.html"><em class="fa fa-calendar-o"></em> Widgets </a></li>
-					<li class="nav-item"><a class="nav-link" href="charts.html"><em class="fa fa-bar-chart"></em> Charts </a></li>
-					<li class="nav-item"><a class="nav-link" href="elements.html"><em class="fa fa-hand-o-up"></em> UI Elements</a></li>
-					<li class="nav-item"><a class="nav-link active" href="cards.html"><em class="fa fa-clone"></em> Cards <span class="sr-only">(current)</span></a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html"><em class="fa fa-clone"></em> Todas las Notas</a></li>
+					<li class="nav-item"><a class="nav-link" href="widgets.html"><em class="fa fa-calendar-o"></em> Familia </a></li>
+					<li class="nav-item"><a class="nav-link" href="charts.html"><em class="fa fa-bar-chart"></em> Trabajo </a></li>
+
 				</ul>
 
-				<a href="#" class="logout-button"><em class="fa fa-power-off"></em> Signout</a></nav>
+				<a href="#" class="logout-button"><em class="fa fa-power-off"></em> Desconectar</a></nav>
 
 			<main class="col-xs-12 col-sm-8 offset-sm-4 col-lg-9 offset-lg-3 col-xl-10 offset-xl-2 pt-3 pl-4">
 				<header class="page-header row justify-center">
