Añadir color a nota

--- a/nuevanota.html
+++ b/nuevanota.html
@@ -98,10 +98,10 @@
 												<label class="col-md-4 control-label" for="">Tipo de Nota</label>
 												<div class="col-md-12">
                           <select>
-                            <option value="volvo">Normal</option>
-                            <option value="saab">Informativa</option>
-                            <option value="mercedes">Requiere atencion</option>
-                            <option value="audi">Importante</option>
+                            <option value="volvo">MORADO - Normal</option>
+                            <option value="saab">VERDE - Informativa</option>
+                            <option value="mercedes">AMARILLO - Requiere atencion</option>
+                            <option value="audi">ROJO - Importante</option>
                           </select>
                         </div>
 											</div>
