Estilos notas colores

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+		<link href="css/estilonotas.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container-fluid" id="wrapper">
@@ -72,7 +73,7 @@
 
 
 							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-primary">
+								<div class="card card-inverse notaAzul">
 									<div class="card-header" title="Titulo">Recoger Separata</div>
 
 									<div class="card-block" title="Contenido">
@@ -88,7 +89,7 @@
 							</div>
 
 							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-warning">
+								<div class="card card-inverse notaAmarilla">
 									<div class="card-header" title="Titulo">Reunion padres</div>
 
 									<div class="card-block" title="Contenido">
@@ -104,7 +105,7 @@
 							</div>
 
 							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-danger">
+								<div class="card card-inverse notaRoja">
 									<div class="card-header" title="Titulo">Prueba de Evaluacion Inacabada</div>
 
 									<div class="card-block" title="Contenido">
@@ -120,7 +121,7 @@
 							</div>
 
 							<div class="col-lg-4 mb-4">
-								<div class="card card-inverse card-success">
+								<div class="card card-inverse notaVerde">
 									<div class="card-header" title="Titulo">Suspender a Tejero</div>
 
 									<div class="card-block" title="Contenido">
